--- a/index.html
+++ b/index.html
@@ -1,42 +1,54 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Socket.IO chat</title>
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-    </style>
-  </head>
-  <body>
-    <div id="wrapper">
-      <ul id="messages"></ul>
-    </div>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
-    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-    <script>
-      $(document).ready(function(){
-        var socket = io();
-        $('form').submit(function(){
-          socket.emit('chat message', $('#m').val());
-          $('#m').val('');
-          return false;
-        });
-        socket.on('chat message', function(msg){
-          $('#messages').append($('<li>').html(msg));
+	<head>
+		<title>Socket.IO chat</title>
+		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	</head>
 
-          $(window).scrollTop($(window).height());
-        });  
-      });
-      
-    </script>
-  </body>
+	<body>
+		<div class="container">
+			<div class="panel panel-primary">
+				<div class="panel-heading">
+					<span class="glyphicon glyphicon-comment"></span> Chat
+					<div class="btn-group pull-right">
+						<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
+							<span class="glyphicon glyphicon-chevron-down"></span>
+						</button>
+						<ul class="dropdown-menu slidedown">
+							<li><a href="#"><span class="glyphicon glyphicon-ok-sign"></span>Available</a></li>
+							<li><a href="#"><span class="glyphicon glyphicon-remove"></span>Busy</a></li>
+							<li><a href="#"><span class="glyphicon glyphicon-time"></span>Away</a></li>
+							<li class="divider"></li>
+							<li><a href="#"><span class="glyphicon glyphicon-off"></span>Sign Out</a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="panel-body">
+					<ul class="list-group" id="messages">
+					</ul>
+				</div>
+				<div class="panel-footer">
+					<form action="">
+						<div class="row">
+							<div class="col-md-11">
+								<input id="m" type="text" class="form-control input-sm" placeholder="Type your message here..." />
+							</div>
+							<div class="col-md-1">
+								<span class="input-group-btn">
+									<button class="btn btn-warning btn-sm">Send</button>
+								</span>
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+
+		<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
+		<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+		<script src="assets/js/script.js"></script>
+
+	</body>
 </html>
