--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		</div>
 
 		<script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-		<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+		<script src="assets/js/jquery-1.11.1.js"></script>
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 		<script src="assets/js/script.js"></script>
 
